k8s/test-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fastapi-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: first-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - fastapi-gateway
  http:
  - match:
    - uri:
        prefix: /chatbot
    route:
    - destination:
        host: chatbot-service
        port:
          number: 9080
